--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Feb 17 09:34:12 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs/api/* include/xmlsec/xmldsig.h
+	src/keysmngr.c src/xmldsig.c: minor documentation bug fixes
+	based on Jesse Pelton's email
+
 Fri Feb 14 12:44:48 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/x509.c: set "verified" cert when loading pkcs12 file.
