--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Feb 21 13:06:44 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in include/xmlsec/version.h 
+	docs/download.html docs/index.html docs/news.html	
+	xmlsec.pc xmlsec.spec: 0.0.13 release
+
 Fri Feb 21 12:59:48 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/transforms.c: fixed incorrect processing of more than
