--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Mar 19 22:56:49 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in include/xmlsec/version.h 
+	docs/download.html docs/index.html docs/news.html
+	xmlsec.pc xmlsec.spec: 0.0.14 release
+
 Wed Mar 19 10:59:41 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* apps/xmlsec.c: force Signature or EncryptedData node
