--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed 26 Mar 2003 01:43:24 AM PST Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs: 0.1.1 release
+	
 Wed Mar 19 22:56:49 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in include/xmlsec/version.h 
