--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr  7 08:20:01 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* apps/xmlsec.c src/x509.c: use "b" flag in fopen() calls
+	(bug reported by Jesse Pelton)
+
 Sat Mar 29 17:47:09 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* tests/aleksey-xmldsig-01/* tests/keys/* tests/testDSig.sh
