--- a/examples/README
+++ b/examples/README
@@ -6,7 +6,8 @@ This folder contains XML Security Library examples.
     README			This file.
     autogen.sh			Run it first!
     configure.in		Examples consiguration
-    Makefile			Makefile for building all the examples
+    Makefile.am			Makefile for building all the examples
+    Makefile.w32		Win32 makefile.
     rsakey.pem			Private PEM key file
     rsapub.pem			Public PEM key file
     rsacert.pem			Certificate for rsakey.pem signed with rootcert.pem
