--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 19 01:08:30 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/openssl/kw_des.c src/openssl/signatures.c: 
+	include openssl/sha.h to help OpenBSD port
+
 Wed 26 Mar 2003 01:43:24 AM PST Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs: 0.1.1 release
