*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 Sun 20 Apr 2003 02:57:06 PM PDT Aleksey Sanin <aleksey@aleksey.com>
 
 	* src/* include/* apps/*: replaced 'unsigned char' with xmlSecByte
-	typedefed to 'unsigned int' to make happy OpenBSD on sparc64 
+	typedefed to 'unsigned char' to make happy OpenBSD on sparc64 
 
 	* examples/*: replaced configure.in with simple Makefile to 
 	prevent problems on different platforms
