--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 27 18:05:23 2003  Igor Zlatkovic  <igor@zlatkovic.com>
+
+	* win32/Makefile.msvc: defined _REENTRANT to enable compilation
+	  with threaded libxml2
+
 Thu Apr 24 08:15:32 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* config.h.in configure.in include/xmlsec/xmlsec.h: use
