--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Apr 29 16:37:18 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in include/xmlsec/Makefile.am include/xmlsec/strings.h
+	include/xmlsec/xkms.h include/xmlsec/xmlsec.h
+	src/Makefile.am src/strings.c src/xkms.c apps/xmlsec.c: first 
+	XKMS framework (disabled by default)
+
 Mon Apr 28 21:13:03 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/download.html docs/index.html docs/news.html: preparing
