--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Apr 30 16:31:10 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* include/xmlsec/strings.h src/strings.c: added strings
+	for XKMS (XKISS) Locate request/result
+
 Wed Apr 30 01:01:06 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* config.h.in configure.in: added check for timegm function
