--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu May  1 08:17:06 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* include/xmlsec/xmltree.h src/xmltree.c src/keysmngr.c:
+	created a new function to quickly create a doc with one root node
+	* src/list.c: fixed bug in xmlPtrListEmpty() function
+	* src/xkms.c: created framework for Locate request/result processing
+
 Wed Apr 30 16:31:10 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/strings.h src/strings.c: added strings
