--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri 02 May 2003 12:00:47 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/openssl/app.c: adopt instead of copy the key cert 
+	from pkcs12 fil
+
 Thu May  1 08:17:06 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/xmltree.h src/xmltree.c src/keysmngr.c:
