--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon May  5 08:00:31 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in: new configuration options for NSS (Tej)
+	* src/nss/app.c src/nss/ciphers.c src/nss/crypto.c 
+	src/nss/digests.c src/nss/hmac.c: use NSS style includes (Tej)
+
 Fri 02 May 2003 12:00:47 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/openssl/app.c: adopt instead of copy the key cert 
