--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 12 10:01:30 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in: link with NSS using -rpath (Tej)
+
 Mon May  5 08:00:31 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in: new configuration options for NSS (Tej)
