--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon 02 Jun 2003 09:38:13 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+    
+	* removed debian folder
+
 Sun Jun  1 20:30:08 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in docs/download.html docs/index.html docs/news.html
