--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun  7 20:35:25 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* Makefile.am apps/* include/xmlsec/keysdata.h src/openssl/app.c tests/*: 
+	added PKCS#8 support (based on Tej's patch)
+
 Fri Jun  6 14:53:25 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/openssl/x509.c: skip ASN1 time check for OpenSSL 0.9.6
