fixed test problems when sourcedir != builddir

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon 07 Jul 2003 07:02:46 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+    
+	* Makefile.am: fixed test suite problem when builddir != sourcedir
+	(reported by Roumen)
+
 Thu Jul  3 07:57:25 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/openssl/x509vfy.c: added a const word to suppress
