--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@ Contibutions:
 --------------------------------------------------------
 Windows port: Igor Zlatkovic <igor@stud.fh-frankfurt.de>
 Debian port: John Belmonte  <jvb@prairienet.org> 
+NSS port: Tej Arora (tej@netscape.com)
 
