--- a/man/xmlsec1-config.1
+++ b/man/xmlsec1-config.1
@@ -9,10 +9,10 @@ xmlsec1-config \- manual page for xmlsec1-config 1.0.4
 Known values for OPTION are:
 .TP
 \fB\-\-prefix\fR=\fIDIR\fR
-change XMLSEC prefix [default /usr/local]
+change XMLSEC prefix [default /home/aleksey]
 .TP
 \fB\-\-exec\-prefix\fR=\fIDIR\fR
-change XMLSEC executable prefix [default /usr/local]
+change XMLSEC executable prefix [default /home/aleksey]
 .TP
 \fB\-\-libs\fR
 print library linking information
@@ -33,15 +33,3 @@ output version information
 configure with XMLSEC crypto library (one of the
 following: none default  openssl gnutls nss)
 [default "openssl"]
-.SH "SEE ALSO"
-The full documentation for
-.B xmlsec1-config
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B xmlsec1-config
-programs are properly installed at your site, the command
-.IP
-.B info xmlsec1-config
-.PP
-should give you access to the complete manual.
