--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri 18 Jul 2003 10:30:33 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+    	
+	* HACKING: added a coding and commiting rules
+
 Wed 16 Jul 2003 10:11:23 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
 
 	* examples/README, examples/binary.dat: added examples of using
