new patch from Tej: warning fixes; valgrind tests support for nss; moved all private keys to pkcs12 files in the tests suite; custom keys store in xmlsec-nss; RSA-PKCS1 keys transport in xmlsec-nss

--- a/tests/keys/README
+++ b/tests/keys/README
@@ -72,3 +72,60 @@ README
    encrypted
      > openssl pkcs8 -in unencryptedfile.<der|pem> -inform <der|pem> -out encryptedfile.<der|pem> -outform <der|pem> -topk8
 
+5. NSS is unfriendly towards standalone private keys.
+   This procedure helps convert raw private keys into PKCS12 form that is 
+   suitable for not only NSS but all crypto engines.
+
+   5a.
+       Input: DSA/RSA private key in PEM or DER format
+       Output: A PKCS12 file containing the private key, and a self-signed 
+               certificate with the corresponding public key
+    
+       # first convert key file to PEM format, if not already in that format
+       > openssl <dsa|rsa> -inform der -outform pem -in key.der -out key.pem
+    
+       # answer questions at the prompt
+       # Note: use a unique subject (=issuer) for each self-signed cert you 
+       # create (since there is no way to specify serial # using the command 
+       # below)
+       > openssl req -new -keyform <der|pem> -key key.<der|pem> -x509 -sha1 -days 999999 -outform pem -out cert.pem
+    
+       # now using the cert and key in PEM format, conver them to a PKCS12 file
+       # enter some password on prompt
+       > openssl pkcs12 -export -in cert.pem -inkey key.pem -name <nickname> -out keycert.p12
+    
+       # This pkcs12 file can be used directly on the xmlsec command line, or
+       # can be pre-loaded into the crypto engine database (if any).
+    
+       # In the case of NSS, you can pre-load the key using pk12util.
+       # The key and cert will have the nickname "nickname" (used in above step)
+       > pk12util -d <nss_config_dir> -i keycert.p12
+    
+   5b.
+       Input: DSA/RSA private key in PEM or DER format
+              KeyCert containing corresponding public key
+              Other certs in the chain leading from KeyCert to the root
+       Output: A PKCS12 file containing the private key, the KeyCert and the
+               certs in the chain
+    
+       # first convert key file to PEM format, if not already in that format
+       > openssl <dsa|rsa> -inform der -outform pem -in key.der -out key.pem
+
+       # convert all cert files to PEM format, if not already in that format    
+       > openssl x509 -inform der -outform pem -in cert.der -out cert.pem
+
+       # concatenate all cert.pem files created above to 1 file - allcerts.pem
+       > cat keycert.pem cert1.pem cert2.pem  .... > allcerts.pem
+
+       # now using the certs and key in PEM format, conver them to a PKCS12 file
+       # enter some password on prompt
+       > openssl pkcs12 -export -in allcerts.pem -inkey key.pem -name <nickname of key & keycert> [-caname <nickname of cert1> -caname <nickname of cert2>.... ] -out keycert.p12
+    
+       # This pkcs12 file can be used directly on the xmlsec command line, or
+       # can be pre-loaded into the crypto engine database (if any).
+    
+       # In the case of NSS, you can pre-load the key using pk12util.
+       # The key and certs will have the nickname "nickname" 
+       # (used in above step)
+       > pk12util -d <nss_config_dir> -i keycert.p12
+    
